fix z-index for error

--- a/src/components/Error/Error.module.css
+++ b/src/components/Error/Error.module.css
@@ -14,7 +14,7 @@
   font-size: 1.1rem;
   font-family: sans-serif;
   text-align: center;
-  z-index: 1000;
+  z-index: 1001;
   animation: fadeIn 0.3s;
 }
 
